# ibc-proto-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  multihop.patch
.changelog/unreleased/breaking-changes/: 10-extern-ics23.md  141-restore-protos.md  147-fix-script-and-protos.md  166-protojson-support.md  181-event-attribute-bytes.md  187-cosmos-sdk-proto.md  195-tonic-0.11.md  210-borsh-v1.md  215-tendermint-proto-0.37.md  223-prost-tonic-update.md  226-tendermint-proto-wkt.md  227-tendermint-proto-0.39.md  245-interchain-security-proto-v6.1.0.md  246-tendermint-proto-0-40-0.md  249-tendermint-proto-0-40-0.md  33-tendermint-0.26.md  99-tendermint-proto-0.32.md
.changelog/unreleased/bug-fixes/: 171-restore-no-std-attribute.md  203-add-missing-wasm-mod.md
.changelog/unreleased/enhancement/: 164-refactor-error-system.md
.changelog/unreleased/features/: 143-localhost-v1.md  145-prost-0.12.md  149-crypto.md  163-prost-name.md  167-ics721-impl.md  168-add-wasm-client-protos.md  172-sync-ibc-go-rev-to-add-counterparty-channel-upgrade-sequence.md  192-bump-ibc-go-v8-1-0.md  237-transport-feature.md
.changelog/unreleased/improvements/: 186-extend-ibc-mock-fields.md  229-export-tendermint-proto-error.md
.changelog/v0.29.0/: summary.md
.changelog/v0.30.0/breaking-changes/: 90-tendermint-proto-0.31.md
.changelog/v0.31.0/: summary.md
.changelog/v0.31.0-alpha.1/: 95-pbjson.md  summary.md
.changelog/v0.31.0-alpha.1/breaking-changes/: 10-extern-ics23.md
.changelog/v0.31.0-alpha.2/: summary.md
.changelog/v0.31.0-alpha.2/breaking-changes/: 99-tendermint-proto-0.32.md
.changelog/v0.32.0/: summary.md
.changelog/v0.32.0/bug-fixes/: 106-downgrade-borsh-version.md
.changelog/v0.32.0/improvements/: 106-update-ibc-go-6-2-0.md
.changelog/v0.32.1/: summary.md
.changelog/v0.32.1/bug-fixes/: 119-fix-token-transfer-deser-with-no-memo.md
.changelog/v0.33.0/: summary.md
.changelog/v0.34.0/: summary.md
.changelog/v0.34.1/: summary.md
.changelog/v0.35.0/: summary.md
.changelog/v0.35.0/features/: 140-130-ibc-go-v730.md
.changelog/v0.36.0/: summary.md
.changelog/v0.36.1/: summary.md
.changelog/v0.37.0/: summary.md
.changelog/v0.37.1/: summary.md
.changelog/v0.38.0/: summary.md
.changelog/v0.39.0/: summary.md
.changelog/v0.39.1/: summary.md
.changelog/v0.40.0/: summary.md
.changelog/v0.41.0/: summary.md
.changelog/v0.42.0/: summary.md
.changelog/v0.42.1/: summary.md
.changelog/v0.43.0/: summary.md
.changelog/v0.44.0/: summary.md
.changelog/v0.45.0/: summary.md
.changelog/v0.46.0/: summary.md
.changelog/v0.47.0/: summary.md
.changelog/v0.47.1/: summary.md
.changelog/v0.48.0/: summary.md
.changelog/v0.49.0/: summary.md
.changelog/v0.49.1/: summary.md
.changelog/v0.50.0/: summary.md
.changelog/v0.51.0/: summary.md
.changelog/v0.51.1/: summary.md
.changelog/v0.52.0/: summary.md
.github/workflows/: release.yml  rust.yml
definitions/mock/: ibc.mock.proto
scripts/: sync-protobuf.sh
src/: COMETBFT_COMMIT  COSMOS_ICS_COMMIT  COSMOS_SDK_COMMIT  IBC_GO_COMMIT  INTERCHAIN_SECURITY_COMMIT  NFT_TRANSFER_COMMIT  ROLLKIT_IBC_COMMIT  SOVEREIGN_IBC_COMMIT  WASMD_COMMIT  google.rs  lib.rs  traits.rs
src/prost/: cosmos.app.module.v1alpha1.rs  cosmos.app.v1alpha1.rs  cosmos.app.v1alpha1.serde.rs  cosmos.auth.module.v1.rs  cosmos.auth.module.v1.serde.rs  cosmos.auth.v1beta1.rs  cosmos.auth.v1beta1.serde.rs  cosmos.authz.v1beta1.rs  cosmos.bank.module.v1.rs  cosmos.bank.module.v1.serde.rs  cosmos.bank.v1beta1.rs  cosmos.bank.v1beta1.serde.rs  cosmos.base.abci.v1beta1.rs  cosmos.base.kv.v1beta1.rs  cosmos.base.kv.v1beta1.serde.rs  cosmos.base.node.v1beta1.rs  cosmos.base.node.v1beta1.serde.rs  cosmos.base.query.v1beta1.rs  cosmos.base.query.v1beta1.serde.rs  cosmos.base.reflection.v1beta1.rs  cosmos.base.reflection.v1beta1.serde.rs  cosmos.base.reflection.v2alpha1.rs  cosmos.base.reflection.v2alpha1.serde.rs  cosmos.base.snapshots.v1beta1.rs  cosmos.base.snapshots.v1beta1.serde.rs  cosmos.base.store.v1beta1.rs  cosmos.base.store.v1beta1.serde.rs  cosmos.base.tendermint.v1beta1.rs  cosmos.base.v1beta1.rs  cosmos.base.v1beta1.serde.rs  cosmos.crisis.v1beta1.rs  cosmos.crypto.ed25519.rs  cosmos.crypto.ed25519.serde.rs  cosmos.crypto.hd.v1.rs  cosmos.crypto.hd.v1.serde.rs  cosmos.crypto.keyring.v1.rs  cosmos.crypto.keyring.v1.serde.rs  cosmos.crypto.multisig.rs  cosmos.crypto.multisig.serde.rs  cosmos.crypto.multisig.v1beta1.rs  (+97 more)
src/prost-no-transport/: google.api.serde.rs  google.protobuf.serde.rs  ibc.applications.fee.v1.rs  ibc.applications.interchain_accounts.controller.v1.rs  ibc.applications.interchain_accounts.controller.v1.serde.rs  ibc.applications.interchain_accounts.genesis.v1.rs  ibc.applications.interchain_accounts.host.v1.rs  ibc.applications.interchain_accounts.v1.rs  ibc.applications.nft_transfer.v1.rs  ibc.applications.transfer.v1.rs  ibc.applications.transfer.v1.serde.rs  ibc.core.channel.v1.rs  ibc.core.client.v1.rs  ibc.core.client.v1.serde.rs  ibc.core.connection.v1.rs  ibc.core.connection.v1.serde.rs  ibc.core.types.v1.rs  ibc.lightclients.wasm.v1.rs  ibc.mock.serde.rs  interchain_security.ccv.consumer.v1.rs  interchain_security.ccv.provider.v1.rs  stride.interchainquery.v1.rs
src/prost-transport/: cosmos.auth.v1beta1.rs  cosmos.staking.v1beta1.rs  cosmos.upgrade.v1beta1.rs  cosmos_proto.rs  ibc.applications.fee.v1.serde.rs  ibc.applications.interchain_accounts.host.v1.rs  ibc.applications.nft_transfer.v1.rs  ibc.core.channel.v1.rs  ibc.core.connection.v1.rs  ibc.lightclients.localhost.v1.serde.rs  ibc.lightclients.localhost.v2.rs  ibc.lightclients.localhost.v2.serde.rs  ibc.lightclients.solomachine.v3.serde.rs  ibc.lightclients.tendermint.v1.rs  ibc.lightclients.wasm.v1.rs  interchain_security.ccv.consumer.v1.rs  interchain_security.ccv.provider.v1.rs  interchain_security.ccv.v1.rs  stride.interchainquery.v1.rs
src/protobuf/: error.rs  mod.rs
tests/: test_deserialize.rs  test_proto_json.rs  test_serde_default.rs
tools/proto-compiler/: Cargo.toml  README.md
tools/proto-compiler/src/cmd/: clone.rs  compile.rs
(+22 files in other folders)
