[package]
name         = "ibc-proto-compiler"
version      = "0.2.0"
authors      = ["Informal Systems <hello@informal.systems>"]
edition      = "2021"
publish      = false
rust-version = "1.60"

[dependencies]
git2                         = "0.19"
prost-build                  = "0.13"
walkdir                      = "2.3"
argh                         = "0.1"
tonic                        = "0.12"
tonic-build                  = "0.12"
similar                      = "2.2"
informalsystems-pbjson-build = "0.7.0"
regex                        = "1"
